# udgp

./: .gitignore  LICENSE  README.md  RESULTS.txt  TODO.md  distances.txt  environment.yml  input.xyz  instances.py  out.sol  out.txt  output.xyz  requirements.txt  setup.cfg  unassigned_distance.ipynb  unassigned_distance.lp
docs/: TODO.md
results/: results.md
src/udgp/: __init__.py
src/udgp/heuristics/: base_heuristic.py
src/udgp/instances/: __init__.py  artificial_molecule.py  base_instance.py  instance.py  lj_cluster.py  nanoparticles.py  random.py  random_instance.py
src/udgp/models/: __init__.py  base_gurobipy.py  base_model.py  model_1.py  model_2.py  model_3.py  model_4.py  model_5.py
src/udgp/utils/: __init__.py  coords.py  points.py  utils.py
test/: heuristics.ipynb  instances.ipynb  pyomo_test.ipynb  results.txt  test.ipynb  test.py  test_heuristic.py  test_model.py
test/_backup/: env.py  po_model_3.py  test_heuristic.py
udgp/: __init__.py  instance.py
udgp/config/: config.py  default_config.cfg  default_config.yaml
udgp/data/c60/: c60.txt
udgp/data/lj_cluster/: lj_10.txt  lj_101.txt  lj_103.txt  lj_104.txt  (+61 more)
udgp/geometry/: __init__.py  cluster_lj.py  molecule.py  molecule_artificial.py
udgp/instance/: instance.py
udgp/instances/: __init__.py  artificial_molecule.py  instance.py  lj_cluster.py  molecule.py  nanoparticles.py
udgp/logger/: logger.py
udgp/model/: model.py
udgp/models/: __init__.py  base_model.py  model_1.py  model_2.py  model_3.py  model_3_old.py  models.py
udgp/solver/: solver_params.py  solver_params.yaml
udgp/solvers/: __init__.py  solver_config.py  solver_config.yaml  solver_params.py  solver_params.yaml
udgp/utils/: __init__.py  params.py  points.py
(+113 files in other folders)
