[metadata]
name = udgp
version = 0.0.2
description = Problema das distâncias não associadas modelado com gurobipy.
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    udgp
install_requires =
    numpy>=1.25.1
    scipy>=1.11.1
    gurobipy>=10.0.2
    networkx>=3.1
    scikit-learn>=1.3.0
    py3Dmol>=2.0.3
    matplotlib>=3.7.2
    black>=22
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
