[metadata]
name = udgp
version = 0.0.2
description = Problema das distâncias não associadas.
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    udgp
install_requires =
    numpy>=1.22
    scipy>=1.10
    pyomo>=6.6
    gurobipy>=10
    py3Dmol>=2.0
    black>=22
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
