[metadata]
name = udgp
version = attr: udgp.VERSION
description = Solução do problema das distâncias não associadas por programação matemática.
author = Gabriel Braun
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    numpy>=1.22
    scipy>=1.10
    pyomo>=6.6
    gurobipy>=12
    py3Dmol>=2.0
    black>=22

[options.package_data]
* =
    *.txt
